--- a/style.css
+++ b/style.css
@@ -13,17 +13,19 @@ body {
 }
 
 .main {
-  width: 800px;
-  height: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 1060px;
+  height: 760px;
+  display: grid;
+  grid-template-columns: 200px 1fr 200px;
+  grid-template-rows: 120px 1fr;
   border: 1px solid black;
 }
 
 .inner-main {
-  width: 560px;
-  height: 560px;
+  justify-self: center;
+  align-self: center;
+  width: 620px;
+  height: 620px;
   background-color: lightslategray;
   padding: 10px;
   display: grid;
@@ -37,9 +39,45 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 60px;
+  font-size: 96px;
 }
 
 .tile:hover {
   background-color: lightgray;
+}
+
+.player {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.player-popup {
+  display: flex;
+}
+
+.game {
+  display: flex;
+}
+
+.mark {
+  font-size: 64px;
+}
+
+.player-name {
+  font-size: 28px;
+}
+
+.score {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 64px;
+}
+
+.hidden {
+  display: none;
 }
